# zan-lang

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  debugger.c  mac_libpq_bundle.sh
.github/workflows/: ci.yml  drivers.yml  release.yml  runtime-tests.yml
assets/: zan.rc
cmake/: bundle_toolchain.cmake  zan_version.h.in
docs/: ABI.md  ARCHITECTURE.md  ASSET_PIPELINE.md  ASYNC_CPS_DESIGN.md  BOOTSTRAP.md  CODING_STANDARDS.md  CONCURRENCY.md  DESIGN.md  ERROR_CATALOG.md  EXECUTION_PLAN.md  IDE.md  IDE_PUBLISH.md  NET_PERFORMANCE.md  PERFORMANCE.md  PRODUCTION_PLAN.md  PROJECT_STRUCTURE.md  RELEASE.md  ROADMAP.md  SECURITY.md  SELF_CONTAINED_TOOLCHAIN.md  SPEC.md  STDLIB.md  STDLIB_ANALYSIS.md  STDLIB_COMPONENT_STANDARDS.md  STDLIB_DB_AARDIO_REF.md  STDLIB_ZAN_DESIGN.md  TOOLING.md  WORKSPACE_CONVENTIONS.md  ai-assist.md  platform-targets.md  ui-driver.md
docs/bugs/: O0-list-index-write-stack-leak.md  catch-no-type-matching.md  cross-module-base-class-field-binding.md  generics-uniform-repr.md  repro_list_index_write.zan
drivers/: README.md
examples/: arc_test.zan  arpg_smoke.zan  arr_field.zan  array_test.zan  async_test.zan  callback_test.c  callback_test.def  callback_test.zan  class_inherit_test.zan  classes.zan  collections.zan  collections_test.zan  components_demo.zan  ctor_test.zan  delegate_test.zan  dict_min.zan  dict_min2.zan  dict_simple.zan  dict_test.zan  drawing_test.zan  enum_pattern_test.zan  enum_test.zan  error_test.zan  ffi_demo.zan  ffi_test.zan  fileio_test.zan  full_stdlib_test.zan  game_gpu_test.zan  game_sprite_demo.zan  generics_test.zan  gui_demo.zan  gui_gpu_spike.zan  hello.zan  http_client_bench.zan  http_server_test.zan  http_static_test.zan  ide_demo.zan  inherit_test.zan  inheritance_test.zan  interface_test.zan  (+53 more)
examples/db/: README.md  mysql_crud.zan  odbc_multidb.zan  orm_model.zan  orm_querybuilder.zan  postgres_crud.zan  redis_cache.zan  sqlite_crud.zan  zandb_documents.zan
examples/db_probe/: gdeleg.zan  gmethod.zan  linq_feasibility.zan  orm_probe.zan  pg_probe.zan  sqlite_probe.zan
examples/glass_probe/: glass_probe.zan
examples/gui_browser/: gui_browser.zan
examples/gui_gallery/: gui_gallery.zan
examples/json_ui_binding/: json_ui_binding.zan
examples/linq/: linq_demo.zan
examples/mcp_server/: mcp_server.zan
examples/messageboard/: zan.proj
examples/minic/: driver.zan  parser.zan
examples/net/: README.md  http_client.zan  http_server.zan  mqtt_pubsub.zan  sse_events.zan  tcp_echo.zan  udp_messaging.zan  websocket_chat.zan  worker_server.zan
examples/ui_backend/: ui_backend_demo.zan  ui_render_demo.zan
scripts/: _shot2.ps1  bake_cjk_font.py  bake_font.ps1  bake_title.py  bootstrap.bat  bootstrap.sh  build_arpg_legend_idle.ps1  build_components.ps1  build_gallery.ps1  build_game_board_classics.ps1  build_glassprobe.ps1  build_gui.ps1  build_gui_driver.ps1  build_gui_sdl_smoke.ps1  build_ide.ps1  build_jsonbind.ps1  build_jsontest.ps1  build_proctest.ps1  build_texttest.ps1  build_uitest.ps1  click.ps1  designer_drag.ps1  e2e_pipeline.ps1  front2.ps1  game_tool.ps1  gen_assets.ps1  gfront.ps1  hovershot.ps1  legend2_tool.ps1  long_gui.ps1  mac_libpq_rpath.sh  manifest_menus.json  manifest_test.json  pack_single.ps1  package_bundle.sh  package_games.ps1  pkg_stub.c  probe_files.ps1  publish_ide.ps1  scan_components.ps1  (+26 more)
src/common/: host_oom.h  json.c  json.h  rpc.c  rpc.h
src/compiler/: arena.c  arena.h  ast.c  ast.h  binder.c  binder.h  checker.c  checker.h  crosscomp.c  crosscomp.h  dbgen.c  dbgen.h  diag.c  diag.h  incremental.c  incremental.h  irgen.c  irgen.h  irgen_arc.c  irgen_async.c  irgen_builtins.c  irgen_call.c  irgen_emit.c  irgen_expr.c  irgen_expr_core.c  irgen_generics.c  irgen_stmt.c  jsongen.c  jsongen.h  lexer.c  lexer.h  main.c  optimizer.c  optimizer.h  package.c  package.h  parser.c  parser.h  stdlib_ext.c  stdlib_ext.h  (+2 more)
src/dap/: dap_main.c  debugger.c  debugger.h
src/doc/: zandoc.c
src/fmt/: zanfmt.c
src/ide/: debugger.c  debugger.h  designer.c  designer.h  editor.c  editor.h  ide_main.c  intellisense.c  intellisense.h  piece_table.c  piece_table.h  project.c  project.h
src/ide_zan/: AssetManager.zan  DebugSession.zan  LspSession.zan  SceneDesigner.zan  ZanIDE.CodeNav.zan  ZanIDE.Dap.zan  ZanIDE.Panels.zan  ZanIDE.Workspace.zan  ZanIDE.zan  ide_demo.zan
src/lsp/: intellisense.c  lsp_main.c
src/pkg/: zanpkg_main.c
src/runtime/: gui_runtime.c  gui_runtime_font.c  gui_runtime_mac.m  gui_runtime_sdl.c  gui_runtime_shims.c  gui_runtime_text.c  gui_runtime_x11.c  rt_co.c  rt_co.h  rt_core.c  rt_core.h  rt_crash.h  rt_io.c  rt_io.h  rt_sched.c  rt_sched.h  rt_sync.c  rt_sync.h  rt_wasm.c
src/self/: ast.zan  bootstrap.zan  checker.zan  checker_full.zan  codegen.zan  codegen_full.zan  lexer.zan  lexer_full.zan  main.zan  parser.zan  parser_full.zan  rt_divzero.zan  rt_leak.zan  selfctrl.zan  selfhost.zan  selfparse.zan  selfpipe.zan  selfvars.zan  selfvm.zan  selfvmarr.zan  selfvmcf.zan  selfvmelse.zan  selfvmfn.zan  selfvmops.zan  token.zan  zc0.zan  zc0_input.zan  zc1.zan  zc10.zan  zc10_input.zan  zc11.zan  zc11_input.zan  zc12.zan  zc12_input.zan  zc13.zan  zc13_input.zan  zc1_input.zan  zc2.zan  zc2_input.zan  zc3.zan  (+15 more)
src/selfhost/: ast.zan  binder.zan  checker.zan  dbgen.zan  diag.zan  irgen.zan  irgen_async.zan  irgen_expr.zan  irgen_stmt.zan  jsongen.zan  lexer.zan  main.zan  parser.zan  token.zan
stdlib/Game/: README.md
stdlib/Gui/: App.zan  Control.zan  CustomComponents.zan  Designer.Form.zan  Designer.Inspector.zan  Designer.zan  Effects.zan  Event.zan  Fx.zan  HandlerRegistry.zan  Icon.zan  Layout.zan  Native.zan  PropSpec.zan  Reactive.zan  Render.zan  Serialize.zan  StyleSheet.zan  Text.zan  Theme.zan  Types.zan  Ui.zan  UiDoc.zan  UiDriver.zan
stdlib/Platform/: Posix.zan  Runtime.zan  Windows.zan
stdlib/SDL3/: Core.zan  Event.zan  Gpu.zan  (+5 more)
tests/: run_case.cmake  run_dap.cmake  run_determinism.cmake  run_fixedpoint.cmake  run_leakcheck.cmake  run_selfcompile.cmake  run_selfhost.cmake
zan-site/: README.md  package.json  wrangler.toml
(+968 files in other folders)
